# BigMatch

./: .gitignore  CMakeLists.txt  costs.py  doubleGreedy.cxx  format_to_csv.py  generateGraph.cxx  graphmaking.cxx  greedy.cxx  hungarian.py  matching.c  matching.cxx  matching100.cxx  neighborhood.py  preComputeNeighborhoods.py  preComputeRunOpt.py  preprocess.py  readme.txt  runopt.py  testGreedy.py
